--- a/week3/day4/mini_project_coloring.html
+++ b/week3/day4/mini_project_coloring.html
@@ -74,7 +74,7 @@
       grid.appendChild(cell);
     }
 
-    // Update color when changed
+    // Update colorl when changed
     colorPicker.addEventListener("input", (e) => {
       currentColor = e.target.value;
     });
