--- a/week5/day3/exercices/daily_challenge.html
+++ b/week5/day3/exercices/daily_challenge.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currency Converter</title>
   <style>
     body {
@@ -46,7 +47,8 @@
   <div class="converter">
     <input type="number" id="amount" placeholder="Amount" value="1" min="0">
     <br>
-    <select id="from"></select>
+    <select id="from">
+    </select>
     <button id="switch">⇄</button>
     <select id="to"></select>
     <br>
